--- a/app/src/main/res/layout/tv_kontak.xml
+++ b/app/src/main/res/layout/tv_kontak.xml
@@ -1,29 +1,32 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
+    >
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_android"
-        android:contentDescription="@string/img" />
+        android:layout_width="19dp"
+        android:layout_height="20dp"
+        android:src="@mipmap/ic_launcher" />
+
     <TextView
         android:id="@+id/nama"
-        android:layout_width="wrap_content"
+        android:layout_width="101dp"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/img"/>
+        android:text="Nama" />
+
     <TextView
         android:id="@+id/nomor"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nama"/>
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/more"
-        android:layout_toEndOf="@+id/nama"/>
+        android:text="No Hp" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/telpon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Call" />
+
+</LinearLayout>
