--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -1,89 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Maps2">
+    tools:context=".Maps2"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_lati"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/latitude"
-        android:textSize="20sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="104dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/ed_lati"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints="no"
-        android:inputType="text"
-        android:hint="@string/masukkan_di_sini"
-        android:layout_toEndOf="@id/text_lati"
-        android:layout_marginStart="10dp"
-        android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/text_longi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/longitude"
-        android:textSize="20sp"
-        android:layout_below="@id/text_lati"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"/>
+            <EditText
+                android:id="@+id/ed_lati"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="Latitude" />
 
-    <EditText
-        android:id="@+id/ed_longi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints="no"
-        android:inputType="text"
-        android:hint="@string/masukkan_di_sini"
-        android:textSize="20sp"
-        android:layout_below="@id/ed_lati"
-        android:layout_marginStart="5dp"
-        android:layout_toEndOf="@id/text_longi"/>
+            <EditText
+                android:id="@+id/ed_longi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="Longitude" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_zoom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/zoom"
-        android:layout_below="@id/text_longi"
-        android:textSize="20sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/ed_zoom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/masukkan_di_sini"
-        android:layout_toEndOf="@id/text_zoom"
-        android:layout_below="@id/ed_longi"
-        android:textSize="20sp"
-        android:layout_marginStart="5dp"
-        android:autofillHints="no"
-        android:inputType="numberDecimal" />
+            <EditText
+                android:id="@+id/ed_zoom"
+                android:layout_width="92dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                tools:ignore="SpeakableTextPresentCheck"
+                android:hint="Zoom"/>
 
-    <Button
-        android:id="@+id/btn_loc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/locate"
-        android:layout_toEndOf="@id/ed_lati"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="50dp"/>
+            <Button
+                android:id="@+id/btn_loc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Go" />
 
-    <fragment
-        android:id="@+id/frag_maps1"
-        android:layout_width="415dp"
-        android:layout_height="800dp"
-        android:layout_below="@id/ed_zoom"
-        android:layout_marginTop="10dp"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        </LinearLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <fragment
+            android:id="@+id/frag_maps1"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="406dp"
+            android:layout_height="606dp"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="126dp" />
+    </LinearLayout>
+
+</LinearLayout>
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".Maps2">-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/text_lati"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/latitude"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="10dp"/>-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/ed_lati"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:autofillHints="no"-->
+<!--        android:inputType="text"-->
+<!--        android:hint="@string/masukkan_di_sini"-->
+<!--        android:layout_toEndOf="@id/text_lati"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:textSize="20sp"/>-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/text_longi"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/longitude"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_below="@id/text_lati"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="20dp"/>-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/ed_longi"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:autofillHints="no"-->
+<!--        android:inputType="text"-->
+<!--        android:hint="@string/masukkan_di_sini"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_below="@id/ed_lati"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:layout_toEndOf="@id/text_longi"/>-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/text_zoom"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/zoom"-->
+<!--        android:layout_below="@id/text_longi"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="20dp"/>-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/ed_zoom"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="@string/masukkan_di_sini"-->
+<!--        android:layout_toEndOf="@id/text_zoom"-->
+<!--        android:layout_below="@id/ed_longi"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:autofillHints="no"-->
+<!--        android:inputType="numberDecimal" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/btn_loc"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/locate"-->
+<!--        android:layout_toEndOf="@id/ed_lati"-->
+<!--        android:layout_marginStart="55dp"-->
+<!--        android:layout_marginTop="50dp"/>-->
+
+<!--    <fragment-->
+<!--        android:id="@+id/frag_maps1"-->
+<!--        android:layout_width="415dp"-->
+<!--        android:layout_height="800dp"-->
+<!--        android:layout_below="@id/ed_zoom"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:name="com.google.android.gms.maps.SupportMapFragment"/>-->
+
+<!--</RelativeLayout>-->
